# mirrorweb

./: .gitignore  README.md  start.sh  test-api.html
backend/: .env.example  auth.py  config.py  database.py  main.py  requirements.txt
frontend/: index.html  (+5 more)
pipeline/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURAL_UPGRADES.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  BUSINESS_PROOF.md  CHANGELOG.md  CONTRIBUTING.md  DEMO_GUIDE.md  DEMO_SCRIPT.md  DEMO_SCRIPT_FINAL.md  DEMO_SCRIPT_V3.md  DEPLOYMENT.md  FAQ.md  FINAL_SUBMISSION.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  Makefile  PERFORMANCE.md  PHASE1_COMPLETE.md  POSTHOG_DASHBOARD.md  POSTHOG_SETUP.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  RESEARCH_VERIFIED.md  ROADMAP.md  SECURITY.md  SUBMISSION.md  TODO.md  UI_UX_DESIGN.md  WINNING_STRATEGY.md  config.py  docker-compose.yml  dry_run.py  mirror.py  (+8 more)
pipeline/agents/: __init__.py  cinematic.py  collaboration.py  critic.py  format.py  hyperframes.py  identity.py  intake.py  liveavatar.py  optimizer.py  translate.py  vision.py
pipeline/api/: __init__.py  app.py
pipeline/clients/: __init__.py  elevenlabs.py  fal.py  heygen.py  posthog_client.py
pipeline/core/: __init__.py  cost.py  orchestrator.py  prompts.py  retry.py  router_viz.py  self_improvement.py  state.py
pipeline/examples/: api_usage.py  basic_usage.py  batch_processing.py  custom_agent.py  custom_formats.py  posthog_query.py  slack_bot.py  webhook_integration.py
pipeline/static/: index.html
pipeline/static/templates/: podcast.html  youtube.html
(+17 files in other folders)
